ENHANCEMENT: Publish BatchError event (ALL-546)
Closes ALLIN-546

Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Reviewed-by: Adam Skubicha <askubicha@silenteight.com>
Merged from: https://gitlab.silenteight.com/all-in/core-bridge/-/merge_requests/14